lang/macro/tests/ui/fail/03-multiple-constructors.stderr
error: duplicate constructor definition found here
  --> $DIR/03-multiple-constructors.rs:12:9
   |
12 | /         #[liquid(constructor)]
13 | |         fn init_1(&mut self) {}
   | |_______________________________^
